# calculate_object_pose

./: CMakeLists.txt  README.md  build.sh  cloud_plane_projected.pcd  test.cpp
